# projeto_final

./: .gitmodules  README.md  setup_two_vms.md
GS/: requirements.md  requirements.txt  setup.sh
GS/dashboard/: app.py  create_test_logs.py  package.json
GS/dashboard/static/css/: style.css
GS/dashboard/static/js/: adcs-view.js  graphs.js  main.js
GS/dashboard/templates/: index.html
GS/logs/adcs/: attitude.json
GS/logs/communication/: radio.json
GS/logs/power/: battery.json  consumption.json
GS/logs/system/: status.json
GS/logs/thermal/: temperatures.json
docs/: communication_protocol.md
documents/: project step-by-step.md
satellite/: CMakeLists.txt.bak  README.md  UPDATES.md  diagnose_logs.py  fix_common_issues.sh  generate_telemetry.py  main_satellite.c.bak  process_qemu_output.py  setup.sh  setup_directories.sh  setup_guide.md  setup_ssh.sh  setup_ssh_force.sh  simulate_logs.py  simulate_logs_updated.py  start_satellite.sh  verify_setup.sh
satellite/cortex_qemu_satellite/: BUILD_RUN_GUIDE.md  CMakeLists.txt  Dockerfile  FreeRTOSConfig.h  GROUND_STATION_PLAN.md  PROGRESS_REPORT.md  PROJECT_SUMMARY.md  README.md  README_SATELLITE.md  arm-none-eabi-toolchain.cmake  build_and_run.sh  corrected_build_run.sh  docker_build_run.sh  fixed_build_run.sh  ground_station.py  ground_station_cli.py  ground_station_debug.py  ground_station_new.py  main.c  main_satellite.c  run_qemu.sh  satellite_simulator.py  simple_build.sh  startup_stm32.s  stm32_flash.ld
satellite/cortex_qemu_satellite/comm/: tcp_client.c
satellite/cortex_qemu_satellite/docs/: MINIMUM_REQUIREMENTS.md  PROGRESS_REPORT.md  PROJECT_SUMMARY.md  README_SATELLITE.md  STEP-BY-STEP.md
satellite/cortex_qemu_satellite/include/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  adcs_proc.h  comm_task.h  fault_injection.h  main_so.h  protocol.h  sensors.h  tc_proc.h  tcp_client.h  tm_proc.h  types.h
satellite/cortex_qemu_satellite/src/: comm_task.c  freertos_hooks.c  protocol.c  sensors.c  system_stm32f1xx.c  utils.c
satellite/cortex_qemu_satellite/tasks/: adcs_proc.c  fault_injection.c  main_so.c  tc_proc.c  tm_proc.c
satellite/cortex_qemu_satellite/tests/: test_satellite.c
satellite/qemu_setup/: qemu_config.sh
satellite/qemu_setup/tests/: compile_test.sh  test_posix_support  test_posix_support.c
step-by-step/: project step-by-step.md
step-by-step/resultados/: QEMU + POSIX.txt
